# apyro

./: .gitignore  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
examples/frankfurter/: api.py  endpoints.py  main.py  models.py
src/apyro/: __init__.py  client.py  config.py  endpoint.py  errors.py  response.py
tests/: _mocks.py  conftest.py  test_client.py  test_endpoint.py  test_integration.py
