[project]
name = "apyro"
version = "0.1.0"
description = "An API client library"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Javier Peces", email = "javier.peces@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "httpx-retries>=0.5.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
